<resources>
    <string name="app_name">Caleb_Router</string>
    <string name="title_bar_text">K-2S0 Router</string>
    <string name="sniffer_title_bar_text">Summary Frame List</string>
    <string name="table_title_bar_text">Internal Tables</string>
    <string name="adjacency_table_title_text">Adjacency Table</string>
    <string name="arp_table_title_text">ARP Table</string>
    <string name="routing_table_title_text">Routing Table</string>
    <string name="forwarding_table_title_text">Forwarding Table</string>
    <string name="IPMenuItem">Show Ip Address</string>
    <string name="DialogueMenuItem">Add Adjacency</string>

</resources>
